# material-symbols

./: .gitignore  Cargo.toml  README.md  build.rs  extra.rs  generate.rs
src/: lib.rs
