[package]
name = "material_symbols"
version = "0.0.1"
authors = [
"Felix Schütt <felix.schuett@maps4print.com>",
"insideoutlizard <insideoutlizard@gmail.com>"
]
edition = "2024"
rust-version = "1.95.0"
description = "Strongly-typed codepoint mappings for the Google Material Symbols"
readme = "README.md"
keywords = ["gui", "material", "material-3", "material-symbols", "icon", "icons", "m3", "m3e" ]
categories = ["web-development", "gui"]
build = "./build.rs"
license = "Apache-2.0"
repository = "https://github.com/fschutt/material-icons"

[features]
default = ["sharp"]

outlined = []
rounded = []
sharp = []
